css/styles.css
/*-------------------------GENERAL-STYLES-------------------------*/

html {
	scroll-behavior: smooth;
}

body {
	text-align: center;
	color: #F4F4F4;
	font-family: 'Source Sans Pro', sans-serif;
	font-size: 1.2rem;
}

h2 {
	font-weight: 700;
	margin-bottom: 3.5rem;
}

h1 {
	font-family: 'Francois One', sans-serif;
}

h1, h2 {
	text-transform: uppercase;
	color: rgb(122,154,221);
	filter: drop-shadow(rgba(8, 56, 157, 0.95) 0px 0px 2.29233px) drop-shadow(rgba(30, 71, 157, 0.75) 0px 0px 11.4617px) drop-shadow(rgba(30, 71, 157, 0.44) 0px 0px 34.385px);
}

li {
	list-style: none;
}

ul {
	margin: 0;
	padding: 0;
}

#home {
	background: linear-gradient(rgb(0 0 0 / 70%), rgba(55, 51, 74, 0.7)), url(../images/header-bg.jpg);
	background-repeat: no-repeat;
	background-size: 100% 100%;
	height: 100vh;
	padding-top: 2rem;
}

footer h2 {
	margin-bottom: 1.2rem;
}

footer span {
	font-size: 1rem;
}

footer.container-fluid {
	padding-bottom: 2rem;
}

::selection {
    color: #FFF;
    background: #1D1B27;
}

.container-fluid {
	padding-top: 2rem;
	padding-bottom: 6rem;
	padding-left: 16rem;
	padding-right: 16rem;
}

.bgcolor1 {
	background-color: #1D1B27;
}

.bgcolor2 {
	background-color: #353247;
}

.btn {
	border-radius: 1.5rem;
	padding: .5rem 2rem;
	font-size: 1.5rem;
}

.btn i {
	margin-right: .8rem;
	font-size: 1.5rem;
	color: #D9D9D9;
}

.btn-submit {
	background-color: #353247;
	color: #B4B4B3;
	transform: scale(1);
	transform: translateY(0);
	transition: all .2s ease-in;
	margin-top: .4rem;
}

.btn-submit:hover {
	/* transform: scale(0.9); */
	transform: translateY(-3px);
	box-shadow: 0px 4px 6px #2e2d41;
	background-color: #3f3c54;
}

.btn-submit:active {
	transform: scale(0.99);
}


/* -----------------------------SIDEBAR----------------------------- */

.sidebar {
	position: fixed;
	height: 100%;
	width: 31%;
	background-color: #1D1B27;
	right: -100%;
	top: 0;
	z-index: 100;
	transition: all 0.8s ease 0s;
	padding: 3.5rem 0;
}

.sidebar {
	color: #D9D9D9;
}

.sidebar .close-btn {
	position: absolute;
	color: #B4B4B3;
	font-size: 1.75rem;
	cursor: pointer;
	left: 1rem;
	top: .4rem;
	transition: all .2s ease;
}

.sidebar .close-btn:hover {
	color: #D9D9D9;
}

.sidebar .logo img {
	width: 9rem;
	height: 9rem;
	border-radius: 50%;
	margin-bottom: 2rem;
}

.sidebar .logo h3 {
    margin-bottom: .7rem;
}

.sidebar .owner {
	position: absolute;
	width: 100%;
	bottom: 1rem;
	font-size: 1rem;
}

.slide-right {
	right: 0;
	transition: all 0.4s ease 0s;
}

.menu {
	margin-top: 2.5rem;
}

.menu ul li a {
	border-top: 1px solid #353247;
	display: block;
	color: white;
	text-decoration: none;
	font-size: 1.4rem;
	padding: .45rem 0;
	transition: all 0.3s ease-out 0s;
}

.menu ul li a.active {
	background-color: #ffbf3b;
	color: black;
}

.menu ul li a:hover {
	background-color: #ffbf3b;
	color: black;
}

.menu ul li:last-child a {
	border-bottom: 1px solid #353247;
}

/* -----------------------------HEADER----------------------------- */

.mainmenu {
	position: relative;
	padding-left: 16rem;
	padding-right: 16rem;
}

.mainmenu .logo {
	text-align: left;
}

.mainmenu .logo a {
	font-size: 3rem;
	font-family: 'big shoulders display', cursive;
	font-size: 3rem;
	font-weight: 700;
	color: rgb(122,154,221);
	filter: drop-shadow(rgba(8, 56, 157, 0.95) 0px 0px 2.29233px) drop-shadow(rgba(30, 71, 157, 0.75) 0px 0px 11.4617px) drop-shadow(rgba(30, 71, 157, 0.44) 0px 0px 34.385px);
}

.mainmenu nav {
	padding: 1.6rem 0;
}

.mainmenu nav li {
	float: left;
	margin: 0 1rem;
	position: relative;
}

.mainmenu nav li a {
	font-size: 1.2rem;
	color: #D9D9D9;
	text-decoration: none;
}

.mainmenu .expand-sidebar {
	color: #D9D9D9;
	position: absolute;
	cursor: pointer;
	top: 1.6rem;
	right: 2rem;
	font-size: 1.5rem;
}

.mainmenu nav li::after {
	content: "";
	background: #D9D9D9;
	position: absolute;
	bottom: -5px;
	left: 0;
	height: 3px;
	width: 0;
	transition: width .3s;
}

.mainmenu nav li:hover::after {
	width: 100%;
}

.h-intro {
	font-weight: 700;
	font-size: 3.2rem;
	position:relative;
	top: 18rem;
}

/* -----------------------------ABOUT-ME----------------------------- */

#about {
	transition: all 1s ease;
}

.p3x4 {
	width: 100%;
	height: 100%;
	/* background-image: url(../images/3x4.png); */
    clip-path: polygon(20% 0%, 80% 0%, 100% 50%, 80% 100%, 20% 100%, 0% 50%);
}

.about-info {
	text-align: left;
	padding-top: 2rem;
	padding-bottom: 2.5rem;
	font-size: 1.2rem;
	/* width: 300px; */
}

.about-info-list {
	color: #B4B4B3;
}

/* ---------------------------MY-SKILLS--------------------------- */ 

.skill {
	text-align: left;
	padding-right: 5rem;
	color: #B4B4B3;
	text-transform: uppercase;
}

.skill-item {
	font-size: 1.3rem;
	margin-bottom: 3rem;
}

.skill-item-name {
}

.skill-item-progress {
	float: right;
	color: #D9D9D9;
}

.skill-item-bar {
	background-color: #464646;
	height: .4rem;
	margin-top: 1rem;
	border-radius: 1rem;
}

.skill-item-bar-progress {
	background-color: black;
	width: 85%;
	height: inherit;
	border-radius: inherit;
}

/* ---------------------------MY-SKILLS---------------------------  */

.services-block {
	/* padding-right: 1rem; */
	/* padding-bottom: 2rem; */
	/* padding: 1.7rem; */
	padding-left: 1.7rem;
	padding-right: 1.7rem;
	padding-bottom: 1.7rem;
}

.services-item {
	padding-top: 2rem;
	padding-bottom: 2rem;
	background-color: #353247;
	border-radius: .6rem;
	/* height: 20rem; */
}

.services-item i {
	font-size: 3.5rem;
	color: #60C3D8;
}

.services-item i, h3, p {
	margin-bottom: 1.5rem;
}

.services-item p {
	padding-left: 1rem;
	padding-right: 1rem;
}

/* ---------------------------MY-SKILLS---------------------------  */

.portfolio-item {
	position: relative;
	border-radius: .7rem;
	overflow: hidden;
	text-align: left;
	height: 18rem;
	margin-bottom: 2rem;
}

.portfolio-item img {
	position: absolute;
	left: 0;
	top: 0;
	max-height: 100%;
	min-width: 100%;
	transform: scale(1);
	transition: all 0.3s;
}

.portfolio-item:hover img {
	transform: scale(1.1);
}

.portfolio-item i {
	z-index: 1;
	color:#B4B4B3;
	font-size: 1.8rem;
	position: absolute;
	left: 2rem;
	top: 13rem;
	opacity: 0;
	transition: all cubic-bezier(0.075, 0.82, 0.165, 1) 1s;
	/* transition: all 0.7s; */
}

.portfolio-item:hover i {
	opacity: 1;
}

.portfolio-item .details {
	position: absolute;
	left: 0;
	top: 2rem;
	padding-left: 2rem;
	z-index: 1;
}

.portfolio-item .details h4 {
	transform: translateY(3rem);
	color: #D9D9D9;
	opacity: 0;
	transition: all cubic-bezier(0.075, 0.82, 0.165, 1) 1s;
	/* transition: all 0.3s ease-in-out; */
}

.portfolio-item:hover .details h4 {
	transform: translateY(0);
	opacity: 1;
}

.portfolio-item .details span {
	display: block;
	transform: translateY(3.5rem);
	color: #B4B4B3;
	opacity: 0;
	transition: all cubic-bezier(0.075, 0.82, 0.165, 1) 1s;
}

.portfolio-item:hover .details span {
	opacity: 1;
	transform: translateY(0);
}

.portfolio-item .mask {
	position: absolute;
	left: 0;
	top: 0;
	opacity: 0.3;
	width: 100%;
	height: 100%;
	background-color: black;
	transition: all 0.3s;
}

.portfolio-item:hover .mask {
	opacity: 0.9;
}

/* ---------------------------MY-SKILLS---------------------------  */


.contact-info {
	text-align: left;
	margin-bottom: 3.3rem;
}

.contact-info i {
	float: left;
	font-size: 2.5rem;
	color: #465FCF;
}

.contact-info .details {
	margin-left: 4rem;
}

.contact-info .details h5 {
	color: #B4B4B3;
	font-size: 1.6rem;
}

.contact-info .details p {
	color: #D9D9D9;
	font-size: 1.4rem;
}

.contact-form {
	text-align: left;
}

.form-control {
	/* display: block; */
	/* width: 100%; */
	height: 3rem;
	border-radius: 1.5rem;
	padding: .4rem 1.6rem;
	font-size: 1.1rem;
}

textarea.form-control {
	height: auto;
}

.form-group {
	margin-bottom: 2.5rem;
}

/* ==========================MEDIA-QUERIES==========================  */

@media only screen and (min-width: 320px) {
    .mainmenu {
    	padding-left: 5rem;
    	padding-right: 5rem;
    }	 

    .mainmenu .expand-sidebar {
    	right: 4rem;
    }

	 .h-intro {
    	font-size: 2.8rem;
    }

	 .sidebar {
    	width: 50%;
    }
}

@media only screen and (min-width: 576px) {
    .mainmenu {
    	padding-left: 5rem;
    	padding-right: 5rem;
    }	 

    .mainmenu .expand-sidebar {
    	right: 4rem;
    }

	 .h-intro {
    	font-size: 2.8rem;
    }

	 .sidebar {
    	width: 50%;
    }
}

@media only screen and (min-width: 768px) {
    .mainmenu {
    	padding-left: 8rem;
    	padding-right: 8rem;
    }	 

    .mainmenu .expand-sidebar {
    	right: 4rem;
    }

	.sidebar {
    	width: 40%;
    }
}

